# agentic-rag

./: .env.example  .gitignore  README.md  docker-compose.yml  langsmith_eval.py  presentation.html  project_visualization.html  pyproject.toml  test_embedding.py
backend/: __init__.py  app.py  env.py
backend/api/: __init__.py  resources.py  router.py
backend/api/routes/: auth.py  chat.py  documents.py  sessions.py
backend/chat/: __init__.py  rag_context.py  runtime.py  service.py  storage.py  streaming.py
backend/db/: __init__.py  models.py
backend/indexing/: __init__.py  document_loader.py  embedding.py  html_processor.py  milvus_client.py  milvus_writer.py  parent_chunk_store.py
backend/infra/: __init__.py  auth.py  cache.py  database.py
backend/jobs/: __init__.py  upload_jobs.py
backend/rag/: __init__.py  pipeline.py  utils.py
backend/schemas/: __init__.py  auth.py  chat.py  documents.py
backend/tools/: __init__.py  knowledge.py  weather.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/styles/: main.css
frontend/src/components/: AuthPanel.vue  HistorySidebar.vue  Sidebar.vue
frontend/src/components/Chat/: ChatArea.vue  ChatInput.vue  MessageContent.vue  MessageItem.vue  References.vue  RetrievalTraceDetails.vue  ThinkingTrace.vue  WelcomeScreen.vue
frontend/src/stores/: auth.ts  chat.ts  documents.ts  sessions.ts
frontend/src/types/: chat.ts  document.ts  user.ts
frontend/src/utils/: api.ts  markdown.ts
(+3 files in other folders)
